# green_eye_project

./: README.md
ImageToGray/: CMakeLists.txt  imageToGray.cpp
ImageToGrayMultiTreads/: CMakeLists.txt  imageToGrayMT.cpp
test/: CMakeLists.txt  test.cpp  test.h
utils/: utils.cpp  utils.h
